--- a/Notebooks/OptimumJewelryPricing.ipynb
+++ b/Notebooks/OptimumJewelryPricing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "bd9372fc-6bc4-4fd2-989c-840720224d5f",
    "metadata": {},
    "outputs": [
@@ -13,15 +13,15 @@
       "Requirement already satisfied: seaborn in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (0.11.2)\n",
       "Requirement already satisfied: scipy>=1.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.9.1)\n",
       "Requirement already satisfied: pandas>=0.23 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.4.4)\n",
-      "Requirement already satisfied: numpy>=1.15 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.21.5)\n",
       "Requirement already satisfied: matplotlib>=2.2 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (3.5.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (4.25.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.4.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (9.2.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from seaborn) (1.21.5)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.9)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.4.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (4.25.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (9.2.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from pandas>=0.23->seaborn) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\testimoni\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn) (1.16.0)\n"
      ]
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a496ca13-220b-4c79-af5f-ead7e730d3cf",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b9b9b42e-9c57-40ae-9ad6-319d8a5ccceb",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "5a83f14d-a501-4463-ab38-66c2f99a0160",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "3443dca2-9918-47e0-8c01-24d07653f595",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "4        NaN     red  gold       NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "db6527b5-e13d-4b5a-83ec-d5427793dcb1",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "c073c837-c629-49cb-9263-19e848a51102",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "(95910, 13)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "75982e32-d312-4d14-8d9e-de854c59ae37",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "eb87a18c-0a11-43bd-a0ca-812e7dc31ca9",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "4  1.515916e+18            NaN        red       gold       NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "9fd1e2e2-4c0d-486e-9d47-95fb911afeb8",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "(95910, 13)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "fe18e3e1-1b2c-4990-a0e2-cc4cdff20235",
    "metadata": {},
    "outputs": [
@@ -506,19 +506,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# check for and count missing values\n",
-    "data_set.isnull().sum()"
+    "data_set.isnull().sum()\n",
+    "# data_set.isnull().value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "a99afc6f-865d-49fa-a234-a334915e849f",
    "metadata": {},
    "outputs": [
@@ -541,7 +542,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "abf0e84d-44da-45a5-b044-b956ff2dab11",
    "metadata": {},
    "outputs": [
@@ -694,7 +695,7 @@
        "max    34448.600000  1.554297e+18  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "2d79b379",
    "metadata": {},
    "outputs": [
@@ -774,7 +775,7 @@
        "4  1835566854827934449        102.27"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "1abd5896",
    "metadata": {},
    "outputs": [
@@ -796,7 +797,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "596c4a60-0594-472a-a885-5238a5b57db3",
    "metadata": {},
    "outputs": [
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "90de89b1-aa22-40dc-bc93-5109c2278c6f",
    "metadata": {},
    "outputs": [
@@ -855,7 +856,7 @@
        "2589"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "861fab5c-21bb-4f7c-98ac-643429ee95ce",
    "metadata": {},
    "outputs": [
@@ -878,7 +879,7 @@
        "['SKU_Quantity']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "d9fbfdd7",
    "metadata": {},
    "outputs": [
@@ -902,7 +903,7 @@
        "18.95906072625981"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "95600d31",
    "metadata": {},
    "outputs": [
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "c120bf6d",
    "metadata": {},
    "outputs": [
@@ -953,7 +954,7 @@
        "1054.8979068506155"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "id": "d15c872d",
    "metadata": {},
    "outputs": [
@@ -977,7 +978,7 @@
        "Name: Product_Gender, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "7bbad5bf",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1002,7 @@
        "Name: Product_Gender, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "6fe5c242",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "af512ea0",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1075,7 @@
        "Name: Category_ID, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "281dafc0",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1108,7 @@
        "Name: Category_Alias, Length: 218, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "id": "a3b103e4",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1165,7 @@
        "       '2208.90', '75.76', '278.01', '662.30', '253.77'], dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,8 +1177,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "647bfebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['jewelry.pendant',\n",
+       " 'jewelry.necklace',\n",
+       " 'jewelry.earring',\n",
+       " 'jewelry.ring',\n",
+       " 'jewelry.brooch',\n",
+       " 'jewelry.bracelet',\n",
+       " 'jewelry.souvenir',\n",
+       " 'jewelry.stud']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lets extract the actual categories\n",
+    "categories = data_set[\"Category_Alias\"].unique().tolist()\n",
+    "categories = [c for c in categories if isinstance(c, str) and \"jewelry\" in c]\n",
+    "categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "000e6eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80458, 13)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove the non reasonable categories\n",
+    "trimed = data_set.loc[data_set[\"Category_Alias\"].isin(categories)]\n",
+    "trimed.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4e8339e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83.89"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Percentage of the trimed to raw data\n",
+    "ptr = round(trimed.shape[0] * 100 /data_set.shape[0], 2)\n",
+    "ptr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3166d5e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Order_DateTime     0.000000\n",
+       "Order_ID           0.000000\n",
+       "Product_ID         0.000000\n",
+       "SKU_Quantity       0.000000\n",
+       "Category_ID        5.580231\n",
+       "Category_Alias    10.356584\n",
+       "Brand_ID           4.989052\n",
+       "Price_in_USD       5.580231\n",
+       "User_ID            5.580231\n",
+       "Product_Gender    50.221041\n",
+       "Main_Color         7.986654\n",
+       "Main_Metal         5.694922\n",
+       "Main_Gem          35.510374\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Percentage of missing values in fields of the raw data set\n",
+    "data_set.isnull().sum() * 100 / len(data_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5bd1d502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Order_DateTime     0.000000\n",
+       "Order_ID           0.000000\n",
+       "Product_ID         0.000000\n",
+       "SKU_Quantity       0.000000\n",
+       "Category_ID        0.000000\n",
+       "Category_Alias     0.000000\n",
+       "Brand_ID           4.309081\n",
+       "Price_in_USD       0.000000\n",
+       "User_ID            0.000000\n",
+       "Product_Gender    44.842029\n",
+       "Main_Color         2.656044\n",
+       "Main_Metal         0.110617\n",
+       "Main_Gem          24.232519\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's see if the trimed data is better \n",
+    "trimed.isnull().sum() * 100 / len(trimed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90821f28",
    "metadata": {},
    "outputs": [],
    "source": []
